Fixed where characters overflowed within the display, Added All Clear function, and a handler if a number is divided by 0

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 #display{
 	width: 300px;
 	height: 20px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 .calculatorBody{
 	display: flex;
